@@ -1,11 +1,15 @@
 package com.rslakra.core.http;
 
+import com.rslakra.core.StopWatch;
+import com.rslakra.core.jwt.JWTUtils;
 import org.apache.http.HttpResponse;
 import org.apache.http.client.HttpClient;
 import org.apache.http.client.methods.HttpGet;
+import org.apache.http.client.methods.HttpPost;
 import org.apache.http.util.EntityUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.testng.annotations.Test;
 
 import java.io.IOException;
 import java.net.URISyntaxException;
@@ -31,21 +35,56 @@ public class HttpClientTest {
      * @param url
      */
     public void testExternalRequest(final String url) {
-        HttpGet request = null;
-        HttpResponse response = null;
+        final StopWatch stopWatch = new StopWatch();
+        HttpGet getRequest = null;
+        HttpResponse httpResponse = null;
         try {
-            String urlEncoded = URLEncoder.encode(url, "UTF-8");
-            LOGGER.debug("urlEncoded:" + urlEncoded);
-            request = new HttpGet(new URL(url).toURI());
-            response = httpClient.execute(request);
-            int code = response.getStatusLine().getStatusCode();
-            LOGGER.debug("code:" + code);
-            String payload = EntityUtils.toString(response.getEntity(), StandardCharsets.UTF_8);
-            LOGGER.debug("payload:" + payload);
+            String urlEncoded = URLEncoder.encode(url, JWTUtils.UTF_8);
+            LOGGER.debug("urlEncoded:{}", urlEncoded);
+            getRequest = new HttpGet(new URL(url).toURI());
+            stopWatch.startTimer();
+            httpResponse = httpClient.execute(getRequest);
+            stopWatch.stopTimer();
+            int statusCode = httpResponse.getStatusLine().getStatusCode();
+            LOGGER.debug("statusCode:{}", statusCode);
+            String payload = EntityUtils.toString(httpResponse.getEntity(), StandardCharsets.UTF_8);
+            LOGGER.debug("payload:{}", payload);
         } catch (IOException | URISyntaxException ex) {
-            ex.printStackTrace();
+            stopWatch.stopTimer();
+            LOGGER.error(ex.getLocalizedMessage(), ex);
         } finally {
-            HTTPUtils.INSTANCE.close(request, response);
+            LOGGER.debug("stopWatch:{}" + stopWatch);
+            HTTPUtils.close(getRequest, httpResponse);
+        }
+    }
+
+    @Test
+    public void testHttpPost() {
+        HttpPost postRequest = null;
+        HttpResponse httpResponse = null;
+        final StopWatch stopWatch = new StopWatch();
+        try {
+            String urlString = "https://www.xe.com/currencyconverter/convert/?Amount=1&From=USD&To=INR";
+            String urlEncoded = URLEncoder.encode(urlString, JWTUtils.UTF_8);
+            LOGGER.debug("urlString:{}, urlEncoded:{}", urlString, urlEncoded);
+            postRequest = new HttpPost(new URL(urlString).toURI());
+            postRequest.setHeader(HTTPUtils.REQUEST_TRACER, HTTPUtils.nextRequestTracer());
+            LOGGER.debug("requestTracer:{}", HTTPUtils.getRequestTracer(postRequest));
+            LOGGER.debug("postRequestUri:{}", postRequest.getURI());
+            LOGGER.debug("postRequestUri:{}", postRequest.getURI());
+            stopWatch.startTimer();
+            httpResponse = httpClient.execute(postRequest);
+            stopWatch.stopTimer();
+            int statusCode = httpResponse.getStatusLine().getStatusCode();
+            LOGGER.debug("statusCode:{}", statusCode);
+            String payload = EntityUtils.toString(httpResponse.getEntity(), StandardCharsets.UTF_8);
+            LOGGER.debug("payload:{}", payload);
+        } catch (IOException | URISyntaxException ex) {
+            stopWatch.stopTimer();
+            LOGGER.error(ex.getLocalizedMessage(), ex);
+        } finally {
+            LOGGER.debug("stopWatch:{}", stopWatch);
+            HTTPUtils.close(postRequest, httpResponse);
         }
     }
 
@@ -55,8 +94,8 @@ public class HttpClientTest {
     public static void main(String[] args) {
         HttpClientTest httpClientTest = new HttpClientTest();
         final String
-            urlString =
-            "https://unifiedgeo.slnstg.geotech.yahoo.com:4443/geo/v1/place/woe/2488042?optionalfields=(woe.ancestors)&locale=en-US&size=1&minconfidence=0.5";
+                urlString =
+                "https://unifiedgeo.slnstg.geotech.yahoo.com:4443/geo/v1/place/woe/2488042?optionalfields=(woe.ancestors)&locale=en-US&size=1&minconfidence=0.5";
         httpClientTest.testExternalRequest(urlString);
     }
 }
